package com.practice.domain.prepare;

import lombok.Value;

@Value
public class Number {
    int value;
}
