@startuml
'https://plantuml.com/sequence-diagram

skinparam defaultFontName Cica

package domain.prepare {

    interface IPrepareService{
        prepare() : PrepareField
    }

    class PrepareField {
        -player : Player
        -dealer : dealer
        -deck : Deck
    }

    class Dealer {
        -hand : Hand
        --
        +getHolecard():Card
    }

    class Player {
        -hand : Hand
        --
        +getHand() : Hand
    }

    class Hand {
        -cards : List<Card>
        --
        +publishOneCard():Card
    }

    class Card {
        -number : Number
        -mark : Mark
        --
        +getMessageContent():String
    }

    Hand "1" --o "1" Player
    Hand "1" --o "1" Dealer
    Card "2" --o "1" Hand

    class Number {
        -value : int
    }

    enum Mark {
        SPADE
        DIAMOND
        CLOVER
        HEART
    }

    Mark "1" --o "1" Card
    Number "1" --o "1" Card

    class Deck {
        -cards : List<Card>
        --
        +pop() : Card
    }

    Card "48" --o "1" Deck
}
@enduml